{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 39,
  "lineage": "87ea349a-cc70-1cbe-3236-801131025372",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dbaf7eb37f7aea85",
            "association_id": "eipassoc-070bb9aa3cff1c9d3",
            "domain": "vpc",
            "id": "eipalloc-0dbaf7eb37f7aea85",
            "network_border_group": "af-south-1",
            "network_interface": "eni-04e815bb88527ea05",
            "private_dns": "ip-10-0-83-209.af-south-1.compute.internal",
            "private_ip": "10.0.83.209",
            "public_dns": "ec2-13-247-34-112.af-south-1.compute.amazonaws.com",
            "public_ip": "13.247.34.112",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "GC-nat"
            },
            "tags_all": {
              "Name": "GC-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:466021236912:internet-gateway/igw-0ed29d86886a0dc1f",
            "id": "igw-0ed29d86886a0dc1f",
            "owner_id": "466021236912",
            "tags": {
              "Name": "GC-igw"
            },
            "tags_all": {
              "Name": "GC-igw"
            },
            "vpc_id": "vpc-0f54cdfe9cf806718"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dbaf7eb37f7aea85",
            "connectivity_type": "public",
            "id": "nat-0593ebb33ea60203c",
            "network_interface_id": "eni-04e815bb88527ea05",
            "private_ip": "10.0.83.209",
            "public_ip": "13.247.34.112",
            "subnet_id": "subnet-0ef812046705cff71",
            "tags": {
              "Name": "GC-nat"
            },
            "tags_all": {
              "Name": "GC-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public-af-south-1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:466021236912:route-table/rtb-08af949115ec5f418",
            "id": "rtb-08af949115ec5f418",
            "owner_id": "466021236912",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0593ebb33ea60203c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f54cdfe9cf806718"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public-af-south-1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:466021236912:route-table/rtb-0cf8a830d307e53d4",
            "id": "rtb-0cf8a830d307e53d4",
            "owner_id": "466021236912",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ed29d86886a0dc1f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f54cdfe9cf806718"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-af-south-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d53109dce99fe69",
            "route_table_id": "rtb-08af949115ec5f418",
            "subnet_id": "subnet-046302738f44cd9e4"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private-af-south-1a",
            "aws_subnet.public-af-south-1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-af-south-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6771baf2cf9fb7a",
            "route_table_id": "rtb-08af949115ec5f418",
            "subnet_id": "subnet-0ee1a069ab9a1cc8b"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private-af-south-1b",
            "aws_subnet.public-af-south-1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-af-south-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b02821f73a5c5916",
            "route_table_id": "rtb-0cf8a830d307e53d4",
            "subnet_id": "subnet-0ef812046705cff71"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-af-south-1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-af-south-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044aa826cdec68d08",
            "route_table_id": "rtb-0cf8a830d307e53d4",
            "subnet_id": "subnet-04680e5a3be4d7e07"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-af-south-1b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-af-south-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:466021236912:subnet/subnet-046302738f44cd9e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1a",
            "availability_zone_id": "afs1-az1",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046302738f44cd9e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "466021236912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-af-south-1a",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-af-south-1a",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f54cdfe9cf806718"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-af-south-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:466021236912:subnet/subnet-0ee1a069ab9a1cc8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1b",
            "availability_zone_id": "afs1-az2",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee1a069ab9a1cc8b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "466021236912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-af-south-1b",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-af-south-1b",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f54cdfe9cf806718"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-af-south-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:466021236912:subnet/subnet-0ef812046705cff71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1a",
            "availability_zone_id": "afs1-az1",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef812046705cff71",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "466021236912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-af-south-1a",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-af-south-1a",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f54cdfe9cf806718"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-af-south-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:466021236912:subnet/subnet-04680e5a3be4d7e07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1b",
            "availability_zone_id": "afs1-az2",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04680e5a3be4d7e07",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "466021236912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-af-south-1b",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-af-south-1b",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f54cdfe9cf806718"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:466021236912:vpc/vpc-0f54cdfe9cf806718",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02af041ecf6c1816d",
            "default_route_table_id": "rtb-05194f3106fac2963",
            "default_security_group_id": "sg-063fbb3e195f776f1",
            "dhcp_options_id": "dopt-00be317d1711ff12c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f54cdfe9cf806718",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05194f3106fac2963",
            "owner_id": "466021236912",
            "tags": {
              "Createdby": "gladmanchikosha",
              "Name": "GC-poc",
              "Schedule": "no-schedule"
            },
            "tags_all": {
              "Createdby": "gladmanchikosha",
              "Name": "GC-poc",
              "Schedule": "no-schedule"
            }
          }
        }
      ]
    }
  ]
}